--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI';
+  box-sizing: border-box;
+  background-color: #111111;
+  color: white
+}
+
+a{
+  text-decoration: none;
+}
